--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrE6+alNgswLhU+ipL4LEs",
+      "authorship_tag": "ABX9TyO8hlfr3qzKGXpdpCbVDjVE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -531,11 +531,25 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "d_lLQ5HvMWk7"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "Este es el que más me complicó pero lo pude sacar gracias a que me basé en el pseudocódigo y vi un tutorial porque no me resultaba el ejercicio. También me compliqué con los espacios y tabulaciones.\n"
+        "Este es el que más me complicó pero lo pude sacar gracias a que me basé en el pseudocódigo, los apuntes (como habian condiciones use if y else y como habian variables habia que definirlas) y vi un tutorial porque no me resultaba el ejercicio (los errores fueron con los espacios y tabulaciones principalmente).\n"
       ],
       "metadata": {
         "id": "F1Ac6YcgKOKA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "83BWbhOwMXF8"
       }
     }
   ]
